--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -5,139 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.HomeActivity"
-    android:orientation="vertical"
-    android:weightSum="1"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:layoutDirection="rtl"
-                >
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="هنا "
-                    android:textSize="18sp"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:text="Huna "
-                    android:textSize="14sp"
-                    />
-            </LinearLayout>
-
-
-        </android.support.v7.widget.Toolbar>
-        <TextView
-            android:id="@+id/tv_not_budget"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginTop="-44dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/not_budget"
-            android:gravity="center"
-            android:text="9+"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:clickable="false"
-            android:longClickable="false"
-            android:visibility="invisible"
-
-            />
-    </android.support.design.widget.AppBarLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-
-        >
-
-        <include
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            layout="@layout/content_home"
-
-            />
-        <io.github.yavski.fabspeeddial.FabSpeedDial
-            android:id="@+id/fabsd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            app:fabGravity="bottom_end"
-            app:fabMenu="@menu/fab_menu"
-            app:miniFabBackgroundTint="@color/white"
-            app:miniFabDrawableTint="@color/colorPrimary"
-            app:miniFabTitleTextColor="?attr/colorPrimaryDark"
-            app:fabBackgroundTint="@color/colorPrimary"
-            android:layout_marginBottom="40dp"
-            android:visibility="gone"
-
-            />
-    </FrameLayout>
-
-
-    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
-        android:id="@+id/bottomNav"
-
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentBottom="true"
-        >
-
-    </com.aurelhubert.ahbottomnavigation.AHBottomNavigation>
-   <!-- <com.luseen.luseenbottomnavigation.BottomNavigation.BottomNavigationView
-        android:id="@+id/bottomNav"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        app:bnv_active_color="@color/colorPrimary"
-        app:bnv_active_text_size="9sp"
-        app:bnv_inactive_text_size="7sp"
-        app:bnv_colored_background="false"
-        app:bnv_shadow="false"
-        app:bnv_viewpager_slide="false"
-        app:bnv_with_text="true"
-        >
-
-    </com.luseen.luseenbottomnavigation.BottomNavigation.BottomNavigationView>-->
-</LinearLayout>
+    <include layout="@layout/home_content"/>
 
     <include
         layout="@layout/bottom_sheet_layout"/>
