--- a/app/src/main/res/layout/driver_geocery_not_row.xml
+++ b/app/src/main/res/layout/driver_geocery_not_row.xml
@@ -9,6 +9,7 @@
     android:clickable="false"
     android:longClickable="false"
     android:descendantFocusability="blocksDescendants"
+    android:layout_marginBottom="5dp"
     >
     <FrameLayout
         android:layout_width="match_parent"
